# KitsuneMark

./: CMakeLists.txt  LICENSE  Main.qml  README.md  benchmark.cpp  benchmark.hpp  builder.cpp  builder.hpp  img.qrc  main.cpp  screenlock.qml  system.cpp  system.hpp
.github/workflows/: c-cpp.yml
include/: benchmark.hpp  builder.hpp  system.hpp
qml/: About.qml  Main.qml  Main.qml.autosave  MainPage.qml  Utils.qml  Warning.qml
src/: benchmark.cpp  builder.cpp  main.cpp  system.cpp
